syntax = "proto3";
option csharp_namespace= "Merchandise.Grpc";
package Merchandise;

service MerchandiseGrpc {
  
  rpc GetEmployeeMerchInfo(GetEmployeeMerchInfoRequest) returns (GetEmployeeMerchInfoResponse);
  rpc GetMerchPack(GetMerchRequest) returns (GetMerchResponse);
  
}

message GetEmployeeMerchInfoRequest {
  int32 employee_id = 1;
}

message GetEmployeeMerchInfoResponse {
  
}

message GetMerchRequest {
  
  int32 employee_id = 1;
  int32 statys_type_id = 2;
  int32 merch_type_id = 4;
}

message GetMerchResponse {
  int32 result = 1;
}